--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -8,7 +8,7 @@
     android:background="@color/white"
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.lyqdhgo.environment.ui.gic.MainActivity"
+    tools:context="com.lyqdhgo.environment.ui.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
     <FrameLayout
