--- a/app/src/main/res/layout/fragment_arcgis_layer.xml
+++ b/app/src/main/res/layout/fragment_arcgis_layer.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:text="GisLayerFragment"
         android:textColor="@color/amber_primary" />
-    <!-- MapView -->
+
     <!--<com.esri.arcgisruntime.mapping.view.MapView-->
-    <!--android:id="@+id/mapView"-->
-    <!--android:layout_width="fill_parent"-->
-    <!--android:layout_height="fill_parent">-->
+        <!--android:id="@+id/mapView"-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_height="fill_parent" >-->
     <!--</com.esri.arcgisruntime.mapping.view.MapView>-->
 </LinearLayout>
