--- a/app/src/main/res/layout/fragment_arcgis_layer.xml
+++ b/app/src/main/res/layout/fragment_arcgis_layer.xml
@@ -2,17 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/md_white_1000"
     android:orientation="vertical">
 
-    <TextView
+    <com.esri.android.map.MapView
+        android:id="@+id/map"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="GisLayerFragment"
-        android:textColor="@color/amber_primary" />
-
-    <!--<com.esri.arcgisruntime.mapping.view.MapView-->
-        <!--android:id="@+id/mapView"-->
-        <!--android:layout_width="fill_parent"-->
-        <!--android:layout_height="fill_parent" >-->
-    <!--</com.esri.arcgisruntime.mapping.view.MapView>-->
+        android:layout_height="match_parent"
+        android:background="@color/md_white_1000"></com.esri.android.map.MapView>
 </LinearLayout>
