--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,8 @@
     <color name="colorPrimary">#4285f4</color>
     <color name="colorPrimaryDark">#3367d6</color>
     <color name="colorAccent">#FFC400</color>
+    <color name="bg">#F0F0F0</color>
+    <color name="color_light_blue">#00DDB6</color>
 
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
