--- a/app/src/main/res/layout/fragment_statistic_chat.xml
+++ b/app/src/main/res/layout/fragment_statistic_chat.xml
@@ -1,17 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="10dp"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin">
 
-    <TextView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="ChatFragment"
-        android:textColor="@color/amber_primary" />
-    <!-- MapView -->
-    <!--<com.esri.arcgisruntime.mapping.view.MapView-->
-    <!--android:id="@+id/mapView"-->
-    <!--android:layout_width="fill_parent"-->
-    <!--android:layout_height="fill_parent">-->
-    <!--</com.esri.arcgisruntime.mapping.view.MapView>-->
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <lecho.lib.hellocharts.view.LineChartView
+                android:id="@+id/chart_line"
+                android:layout_width="match_parent"
+                android:layout_height="250dp"></lecho.lib.hellocharts.view.LineChartView>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
+                android:background="@color/gray_light" />
+
+            <lecho.lib.hellocharts.view.ColumnChartView
+                android:id="@+id/chart_column"
+                android:layout_width="match_parent"
+                android:layout_height="250dp"></lecho.lib.hellocharts.view.ColumnChartView>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
+                android:background="@color/gray_light" />
+
+            <lecho.lib.hellocharts.view.PieChartView
+                android:id="@+id/chart_pie"
+                android:layout_width="match_parent"
+                android:layout_height="250dp">
+
+            </lecho.lib.hellocharts.view.PieChartView>
+        </LinearLayout>
+    </ScrollView>
+
+
 </LinearLayout>
