--- a/app/src/main/res/layout/fragment_collect_data.xml
+++ b/app/src/main/res/layout/fragment_collect_data.xml
@@ -1,17 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:gravity="center_horizontal"
         android:text="CollectDataFragment"
         android:textColor="@color/amber_primary" />
-    <!-- MapView -->
-    <!--<com.esri.arcgisruntime.mapping.view.MapView-->
-    <!--android:id="@+id/mapView"-->
-    <!--android:layout_width="fill_parent"-->
-    <!--android:layout_height="fill_parent">-->
-    <!--</com.esri.arcgisruntime.mapping.view.MapView>-->
+
+    <com.lyqdhgo.environment.weight.WaterRipplesView
+        android:id="@+id/wave"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="20dp"
+        app:waveColor="#00ce9b"
+        app:waveCount="5"
+        app:waveOnLoad="true" />
+
+    <Button
+        android:id="@+id/but_breath"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="10dp"
+        android:text="Breath" />
 </LinearLayout>
