add Realm insert Data or Query Data

--- a/app/src/main/res/layout/fragment_collect_data.xml
+++ b/app/src/main/res/layout/fragment_collect_data.xml
@@ -58,4 +58,11 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="10dp"
         android:text="Breath" />
+    <Button
+        android:id="@+id/but_query"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="10dp"
+        android:text="Breath" />
 </LinearLayout>
