--- a/app/src/main/res/layout/item_text.xml
+++ b/app/src/main/res/layout/item_text.xml
@@ -8,9 +8,9 @@
         android:layout_margin="7dp"
         android:id="@+id/item_text"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="64dp"
         android:gravity="center"
         android:text="hello"
         android:textColor="@color/pink_primary"
-        android:textSize="@dimen/sp_16" />
+        android:textSize="28sp" />
 </LinearLayout>
