--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -11,14 +11,14 @@
         android:layout_height="wrap_content">
 
         <TextView
+            android:id="@+id/tv_project_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_marginBottom="3dp"
             android:layout_marginTop="3dp"
             android:gravity="center_horizontal"
-            android:text="夹岩水利枢纽工程环境管理信息平台\n终端系统"
-            android:textSize="32sp" />
+            android:textSize="40sp" />
     </RelativeLayout>
 
     <LinearLayout
